# nlweb-ask-agent

./: .gitignore  CLAUDE.md  DEVELOPER_GUIDE.md  Makefile  README.md  common.mk  docker-compose.refresh.yml  docker-compose.yml  settings.json  settings.local.json
.claude/: settings.json
.github/workflows/: analyze.yml
ask_api/: Dockerfile  FRESHNESS_COMPLETE.md  FRESHNESS_IMPLEMENTATION.md  Makefile  README.md  add_recency_boost_config.py  add_site_config.py  config-llm-scoring.yaml  config.yaml  docker-entrypoint.sh  logging_config.py  pyproject.toml  run_server.py
ask_api/analysis/: compare_models.ipynb  gpt_4_1_summaries.csv  phi_4_summaries.csv  sample_100.csv  scoring_spec.json  scoring_spec_builder.ipynb  scoring_spec_request.json  summarization_benchmark.ipynb
chat-app/: .npmrc  Dockerfile  Dockerfile.dev  Makefile  README.md  package.json  pnpm-lock.yaml  vite.config.ts
chat-app/src/: App.tsx
crawler/: .gitignore  Dockerfile  Makefile  README.md  add_all_sites.sh  add_test_files.py  clean_and_migrate_database.py  create_test_user.py  migrate_database.py  pyproject.toml  test_sites.py
crawler/azure/: README.md  cleanup-resource-group.sh  create-secrets-from-env.sh  create-static-ip.sh  deploy-to-aks.sh  quick-deploy.md  register-providers.sh  setup-and-deploy.sh
crawler/code/core/: README.md  api.py  config.py  cosmos_db.py  db.py  get_queue.py  job_manager.py  log.py  master.py  metrics.py  queue_interface.py  queue_interface_storage.py  rss2schema.py  scheduler.py  vector_db.py  worker.py
crawler/code/core/embedding_provider/: README.md  __init__.py  azure_oai_embedding.py
crawler/code/core/static/: README.md  api-docs.html  app.js  faq.html  file.html  files.html  index.html  queue.html  site-details.html  site.html  workers.html
crawler/code/tests/: README.md  test_master.py  test_worker.py
crawler/code/tests/mockdata/: generate_test_data.py
crawler/testing/: README.md  add_imdb_production.py  add_three_sites.py  clear_dbs.py  launch_test.py  local-setup.sh  run.py  run_k8s_test.sh  start_api_server.py  start_data_server.py  start_worker.py  test_dynamic_updates.py  test_file_removal.py  test_job_recovery.py  test_parse_json.py
crawler/testing/monitoring/: check_status.py  debug_worker.py  monitor_progress.py  monitor_queue.py
crawler/testing/setup/: install_pyodbc_mac.sh  remove_fk_constraint.py  setup_env.sh
deployment/: DEPLOYMENT_LOG.md  Makefile  README.md  azure.yaml
deployment/dashboards/: ask-api-overview.json  crawler-overview.json
deployment/infra/: abbreviations.json  main.bicep  main.parameters.json
frontend/: Dockerfile  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/chat-app/: Makefile  (+4 more)
(+89 files in other folders)
